@@ -144,3 +144,10 @@ let emit_unit obj =
   emit obj ~emitter:(fun ~cont () -> cont [||]) ~conv:ignore ()
 let emit_int =
   emit ~emitter:(fun ~cont n -> cont [|`INT n|]) ~conv:ignore
+
+external _override_class_closure : 
+  string -> g_type -> g_closure -> unit
+  = "ml_g_signal_override_class_closure"
+let override_class_closure { name = name } t c = _override_class_closure name t c
+
+external chain_from_overridden : Closure.argv -> unit = "ml_g_signal_chain_from_overridden"
