@@ -2,25 +2,27 @@
 
 open Gobject
 
+(** Signals *)
+
 type id
 type 'a marshaller = 'a -> Closure.argv -> unit
 type ('a,'b) t =
  { name: string; classe: 'a; marshaller: 'b marshaller }
-    (* When writing marshallers, beware that the list omits the 0th
+    (** When writing marshallers, beware that the list omits the 0th
        argument of argv, which is the referent object *)
 
 val stop_emit : unit -> unit
-    (* Call [stop_emit ()] in a callback to prohibit further handling
+    (** Call [stop_emit ()] in a callback to prohibit further handling
        of the current signal invocation, by calling [emit_stop_by_name].
        Be careful about where you use it, since the concept of current
        signal may be tricky. *)
 
 val connect :
   sgn:('a, 'b) t -> callback:'b -> ?after:bool -> 'a obj -> id
-    (* You may use [stop_emit] inside the callback *)
+    (** You may use [stop_emit] inside the callback *)
 
 val user_handler : (exn -> unit) ref
-    (* A hook to allow changing the behaviour of exceptions in callbacks
+    (** A hook to allow changing the behaviour of exceptions in callbacks
        The default behaviour of printing the exception and ignoring it
        is obtained when [user_handler] is set to [Pervasives.raise] *)
 
@@ -31,13 +33,14 @@ external disconnect : 'a obj -> id -> unit
   = "ml_g_signal_handler_disconnect"
 external emit_stop_by_name : 'a obj -> name:string -> unit
   = "ml_g_signal_stop_emission_by_name"
-    (* Unsafe: use [stop_emit] instead. *)
+    (** Unsafe: use [stop_emit] instead. *)
 external handler_block : 'a obj -> id -> unit
   = "ml_g_signal_handler_block"
 external handler_unblock : 'a obj -> id -> unit
   = "ml_g_signal_handler_unblock"
 
-(* Some marshaller functions, to build signals *)
+(** {4 Marshallers} Some marshaller functions, to build signals *)
+
 val marshal_unit : (unit -> unit) marshaller
 val marshal_int : (int -> unit) marshaller
 val marshal_string : (string -> unit) marshaller
@@ -72,13 +75,21 @@ val marshal4_ret :
   ret:'a data_conv -> 'b data_conv -> 'c data_conv -> 'd data_conv ->
   'e data_conv -> string -> ('b -> 'c -> 'd -> 'e -> 'a) marshaller
 
-(* Emitter functions *)
+(** {4 Emitter functions} *)
+
 val emit :
   'a Gobject.obj -> sgn:('a, 'b) t ->
   emitter:(cont:('c Gobject.data_set array -> 'd) -> 'b) ->
   conv:(Gobject.g_value -> 'd) -> 'b
 val emit_unit : 'a obj -> sgn:('a, unit -> unit) t -> unit
 val emit_int : 'a obj -> sgn:('a, int -> unit) t -> int -> unit
+
+(** {4 Default handler override} *)
+
+val override_class_closure : ('a, 'b) t -> g_type -> g_closure -> unit
+external chain_from_overridden : Closure.argv -> unit = "ml_g_signal_chain_from_overridden"
+
+(**/**)
 
 (* Internal functions. *)
 val enter_callback : (unit -> unit) ref
